# CarND-Capstone

./: .gitignore  README.md
ros/launch/: site.launch  styx.launch
ros/src/: nitin_msgs.txt
ros/src/styx/: bridge.py  server.py
ros/src/twist_controller/: dbw_node.py  package.xml  twist_controller.py
ros/src/twist_controller/scripts/: dbw_node
ros/src/twist_controller/src/twist_controller/: pid.py  twist_controller.py
tl_training/: README.md
tl_training/data/: convert_bosch.py  extract.py  output.pbtxt  reimport.py  simulator_converter.py  tf_data_train.csv  tf_data_val.csv  udacity_converter.py
tl_training/infer/: Carla_infer.py  bosch_infer.py  sim_infer_IMG.py  sim_infer_ryg.py  simulator_infer.py  simulator_infer_faster_r-cnn.py  tl_infer.py  tl_infer_Carla.py  tl_infer_faster_r-cnn.py
tl_training/train/: dl.sh  eval_tl.sh  export_tl.sh  export_tl_BOSCH_faster_r-cnn.sh  export_tl_Carla_faster_r-cnn.sh  export_tl_Simulator_faster_r-cnn.sh  export_tl_faster_r-cnn.sh  faster_rcnn_resnet101_coco_Udacity_BOSCH_NITIN.config  faster_rcnn_resnet101_coco_Udacity_Carla_NITIN.config  faster_rcnn_resnet101_coco_Udacity_Simulator.config  faster_rcnn_resnet101_coco_Udacity_Simulator_NITIN.config  ssd_inception_v2_coco_udacity_simulator3_NITIN.config  ssd_inception_v2_coco_udacity_traffic3_NITIN.config  ssd_inception_v2_coco_udacity_traffic3big.config  ssd_inception_v2_coco_udacity_traffic_NITIN.config  train_tl.sh  train_tl_BOSCH_faster_r-cnn.sh  train_tl_Carla_faster_r-cnn.sh  train_tl_Simulator_faster_r-cnn.sh  train_tl_faster_r-cnn.sh
(+972 files in other folders)
